# SimpleFWI

./: .gitignore  Example_1.ipynb  Example_2.ipynb  Example_3.ipynb  Example_modelling.ipynb  MANIFEST.in  README.md  core.py  misfit.py  optimization.py  pyproject.toml
.ipynb_checkpoints/: Example_modelling-checkpoint.ipynb
data/: marmousi_50.mat
simplefwi/: __init__.py  core.py  core_old_backup.py  misfit.py  optimization.py
tests/: conftest.py
tests/integration/: test_api_compatibility.py  test_examples_compatibility.py  test_forward_pipeline.py  test_inversion_pipeline.py
tests/unit/: test_core.py  test_misfit.py  test_optimization.py
tests/validation/: debug_adjoint.py  debug_components.py  test_H_vs_T.py  test_adjoint_fix.py  test_diagonal_adjoint.py  test_exact_dottest.py  test_mathematical_correctness.py  test_rebuilt_core.py
